Bug 95620 - Presentation Wizard crashes
Summary: Presentation Wizard crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2015-11-05 21:29 UTC by How can I remove my account?
Modified: 2018-05-24 17:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
console logs + bt with debug symbols (14.34 KB, text/plain)
2015-11-06 21:59 UTC, Julien Nabet
Details
valgrind log (6.31 KB, application/x-tar-gz)
2015-11-06 22:24 UTC, Julien Nabet
Details
console logs + bt with debug symbols (7.91 KB, text/plain)
2015-11-06 22:25 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2015-11-05 21:29:29 UTC
In master at least, to reproduce:

Start LO. File>Wizards>Presentation... Click "Next", "Next". Select "Wipe Right" from the Effect widget. Click "Cancel". LO goes away.

Unfortunately if I attach soffice.bin under the debugger, it doesn't crash.

I have seen the same crash on Windows, too; IIRC there I got a backtrace in VS.
Comment 1 Julien Nabet 2015-11-06 21:59:32 UTC
Created attachment 120332 [details]
console logs + bt with debug symbols

On pc Debian x86-64 with master sources updated today (dc5a6426fac6d6488ff764549dca898fb9d71b6f) + enable-dbgutil, I could reproduce the crash.
I attached console logs + bt.
It seems there's a kind of precise timing to reproduce this.
Indeed, I could reproduce this if:
1) when I selected "Wipe", by default "Bottom to Top" began and I had to quickly select the "Left To right" option in order to the preview of the first one wasn't finished.
2) Once the other selected, I had to wait the transition effect to finish but without waiting until preview finish (hope it's clear enough! :-()

I noticed this kind of logs when the timing was wrong (and so I couldn't reproduce this):
warn:legacy.osl:22017:1:slideshow/source/engine/slideview.cxx:928: SlideView::getCanvas(): Disposed
warn:legacy.osl:22017:1:sd/source/ui/slideshow/slideshowimpl.cxx:1870: sd::SlideshowImpl::updateSlideShow(), exception caught: (com.sun.star.uno.RuntimeException) { { Message = "virtual cppcanvas::CanvasSharedPtr slideshow::internal::{anonymous}::SlideView::getCanvas() const,\X000aSlideView::getCanvas(): Disposed", Context = (com.sun.star.uno.XInterface) @0 } }
Comment 2 Julien Nabet 2015-11-06 22:24:39 UTC
Created attachment 120333 [details]
valgrind log
Comment 3 Julien Nabet 2015-11-06 22:25:17 UTC
Comment on attachment 120332 [details]
console logs + bt with debug symbols

wrong bt
Comment 4 Julien Nabet 2015-11-06 22:25:40 UTC
Created attachment 120334 [details]
console logs + bt with debug symbols
Comment 5 Commit Notification 2016-05-18 15:11:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ea14bb0bbb7ca79c0a60a1041243bbebda31e18

Resolves: tdf#95620 crash in presentation wizard

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-05-23 08:38:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0212bf7e832ad8edfdc8d1eee2f222a99eb41429&h=libreoffice-5-1

Resolves: tdf#95620 crash in presentation wizard

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 zahra 2018-05-24 17:31:31 UTC
hi.
yesterday i tried to test presentation wizard and libreoffice crashed in the procedure of changing effects.
did you remove presentation wizard from libreoffice 5.3 because of crashes and uninstabilities?
i tried both versions 5.2.6.2 and 5.2.7.2 and the result was going libreoffice in the recovery mode when attempting to change the effects.
does libreoffice crash in presentation wizard in 4x version and 5.0?
sorry, for my comment.
but i wished that share my observation with you.
God bless you all!
Comment 8 How can I remove my account? 2018-05-24 17:35:26 UTC
Zahra: Please file a new bug report for your problem. It presumably is a different issue than that which this bug report was about.