Resolves: tdf#95620 crash in presentation wizard

possibly a regression from VclPtr or maybe from
VclBuilder, or a bit of both.

Change-Id: I46acf07e219334547429da7b2983d5be9cdb6ef8